--- a/style.css
+++ b/style.css
@@ -8,26 +8,78 @@ body {
 
 div {
     border: 1px solid gray;
-    width: 100%;
-    height: 100%;
 }
 
 .main-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 5fr;
+    height: 100%;
 }
 
 .sidebar {
     background-color: cornflowerblue;
     grid-row: 1 / span 2;
+    display: grid;
+    grid-template-rows: 50px 1fr 2fr;
+    align-content: start;
+    gap: 30px;
+}
+
+.logo {
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: start;
+    gap: 5px;
+    align-items: center;
+    padding-left: 20px;
+    color: white;
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+.logo img {
+    width: 50px;
+}
+
+li img {
+    width: 25px;
+}
+
+.sidebar > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-auto-rows: 50px;
+    align-items: center;
+    padding-left: 20px;
+}
+
+li {
+    display: grid;
+    grid-template-columns: 25px 1fr;
+    gap: 5px;
+    align-items: center;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 .header {
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .content {
     grid-column: 2;
     grid-row: 2;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+    grid-row: 1 / -1;
 }
