--- a/style.css
+++ b/style.css
@@ -78,8 +78,36 @@ li {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
+    gap: 15px;
+    background-color: rgb(236, 235, 235);
+    padding: 15px;
 }
 
 .projects {
     grid-row: 1 / -1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px repeat(3, 1fr);
+    gap: 15px;
+}
+
+.content-header {
+    grid-column: 1 / -1;
+    font-size: 18px;
+    align-self: end;
+}
+
+.announcements, .trending {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+}
+.announcements div:nth-child(2) {
+    display: grid;
+    grid-auto-rows: 1fr;
+}
+
+.trending div:nth-child(2) {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-auto-rows: minmax(50px, 1fr);
 }
