--- a/style.css
+++ b/style.css
@@ -92,11 +92,7 @@ li {
 }
 
 .card {
-    border-radius: 8px;
     border-left: 8px solid orange;
-    background-color: white;
-    box-shadow: 2px 2px 4px 1px lightgray;
-    padding: 10px;
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
 }
@@ -116,13 +112,21 @@ li {
     align-self: end;
 }
 
-.announcements, .trending {
+.announcements-section, .trending {
     display: grid;
     grid-template-rows: 50px 1fr;
+    gap: 15px;
 }
-.announcements div:nth-child(2) {
+.announcements-section div:nth-child(2) {
     display: grid;
     grid-auto-rows: 1fr;
+}
+
+.card, .announcements-container, .trending-container {
+    padding: 20px;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 2px 2px 4px 1px lightgray;
 }
 
 .trending div:nth-child(2) {
