--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 :root {
     box-sizing: border-box;
+    --background-gray: rgb(236, 235, 235);
+    --background-blue: cornflowerblue;
+    --foreground-main: white;
 }
 
 body {
@@ -18,7 +21,7 @@ div {
 }
 
 .sidebar {
-    background-color: cornflowerblue;
+    background-color: var(--background-blue);
     grid-row: 1 / span 2;
     display: grid;
     grid-template-rows: 50px 1fr 2fr;
@@ -33,7 +36,7 @@ div {
     gap: 5px;
     align-items: center;
     padding-left: 20px;
-    color: white;
+    color: var(--foreground-main);
     font-size: 1.75rem;
     font-weight: bold;
 }
@@ -60,7 +63,7 @@ li {
     grid-template-columns: 25px 1fr;
     gap: 5px;
     align-items: center;
-    color: white;
+    color: var(--foreground-main);
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -71,6 +74,24 @@ li {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
+
+.search {
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    padding: 20px;
+    gap: 10px;
+}
+.search img {
+    width: 25px;
+}
+input[type="search"] {
+    border: none;
+    border-radius: 12px;
+    background-color: var(--background-gray);
+    outline: none;
+    padding-left: 10px;
+}
+
 .header-buttons {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -85,8 +106,8 @@ li {
     padding: 10px 20px;
     font-size: 16px;
     font-weight: bold;
-    color: white;
-    background-color: cornflowerblue;
+    color: var(--foreground-main);
+    background-color: var(--background-blue);
 }
 
 .content {
@@ -96,7 +117,7 @@ li {
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 15px;
-    background-color: rgb(236, 235, 235);
+    background-color: var(--background-gray);
     padding: 15px;
 }
 
@@ -148,7 +169,7 @@ li {
 .card, .announcements-container, .trending-container {
     padding: 20px;
     border-radius: 8px;
-    background-color: white;
+    background-color: var(--foreground-main);
     box-shadow: 2px 2px 4px 1px lightgray;
 }
 
