--- a/style.css
+++ b/style.css
@@ -92,6 +92,23 @@ input[type="search"] {
     padding-left: 10px;
 }
 
+.user-small {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+    justify-items: end;
+    align-items: center;
+    gap: 20px;
+    padding: 0 20px;
+    font-weight: bold;
+}
+.user-small > img {
+    width: 25px;
+}
+.user-small > img:nth-child(2) {
+    width: 50px;
+}
+
 .user-big {
     display: grid;
     grid-template-columns: max-content 1fr;
