--- a/style.css
+++ b/style.css
@@ -223,8 +223,22 @@ input[type="search"] {
     box-shadow: 2px 2px 4px 1px lightgray;
 }
 
-.trending div:nth-child(2) {
+.trending-container {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    grid-auto-rows: minmax(50px, 1fr);
+    align-items: center;
+}
+.trending-container > div {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 5px 10px;
+}
+.trending-container img {
+    width: 75px;
+    grid-row: 1 / -1;
+}
+.trending-container > div > div:first-of-type {
+    align-self: end;
+    font-weight: bold;
 }
