--- a/style.css
+++ b/style.css
@@ -165,8 +165,8 @@ input[type="search"] {
 .projects {
     grid-row: 1 / -1;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: 50px;
     gap: 15px;
 }
 
