--- a/style.css
+++ b/style.css
@@ -191,6 +191,9 @@ input[type="search"] {
 .card-buttons input {
     width: 25px;
 }
+.card-buttons input:hover {
+    transform: scale(1.1);
+}
 
 .content-header {
     grid-column: 1 / -1;
