--- a/style.css
+++ b/style.css
@@ -6,14 +6,13 @@
 }
 
 body {
-    height: 100vh;
     margin: 0;
 }
 
 .main-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: max-content 1fr;
     height: 100%;
 }
 
