--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input[type="search"] {
 .user-small > img {
     width: 25px;
 }
-.user-small > img:nth-child(2) {
+.user-small > svg {
     width: 50px;
 }
 
@@ -114,9 +114,10 @@ input[type="search"] {
     grid-template-columns: max-content 1fr;
     grid-template-rows: 2fr 3fr;
     align-items: center;
+    gap: 0 5px;
     padding: 0 20px;
 }
-.user-big > img {
+.user-big > svg {
     grid-row: 1 / -1;
     width: 75px;
 }
@@ -227,6 +228,7 @@ input[type="search"] {
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     align-items: center;
+    gap: 10px;
 }
 .trending-container > div {
     display: grid;
@@ -234,7 +236,7 @@ input[type="search"] {
     grid-template-rows: 1fr 1fr;
     gap: 5px 10px;
 }
-.trending-container img {
+.trending-container svg {
     width: 75px;
     grid-row: 1 / -1;
 }
